added sugar for turtles and patches in the netlogo code in the html file

--- a/index.html
+++ b/index.html
@@ -228,11 +228,16 @@ globals [
 ]
 
 turtles-own [ 
-  id 
+  id
+  sugar 
+]
+
+patches-own [
+  psugar
 ]
 
 to startup
-  set shapes-list [ "ant" "spider" "ladybug" "turtle" "armadillo"]
+  set shapes-list [ "defalut" "ant" "spider" "ladybug" "turtle" "armadillo"]
 end
 
 ;;;; GBCC EVENTS ;;;;
@@ -285,6 +290,7 @@ to setup-listen-to-student [ user-id ]
     let coords gbcc:get-from-user user-id (word "turtle-data-" id)
     setxy item 1 coords item 2 coords
     set color gbcc:get-from-user user-id "color"
+    set sugar gbcc:get-from-user user-id "sugar"  ;;;;;;;;;sugar
   ]
 end
 
@@ -294,6 +300,11 @@ to listen-to-student [ user-id ]
   foreach move-messages [ message -> 
     move-turtle user-id message
   ]
+  let harvest-message gbcc:get-stream-from-user user-id "harvest"
+  foreach harvest-messages [
+     harvest-sugar user-id message
+  ]
+;  set sugar gbcc:get-from-user user-id "sugar"   ;;;;;;;;;;sugar
 end
 
 to move-turtle [ user-id message ]
@@ -311,27 +322,52 @@ to move-turtle [ user-id message ]
     let my-color color    
     let turtle-data (list user-id xcor ycor)
     ask turtles [ gbcc:add-to-stream (word id "-turtle-data") turtle-data ] 
-    let patch-data (list xcor ycor color) 
-    let turtle-data-for-patches (list color xcor ycor)
-    ask patches in-radius 3 
-    [
-       set pcolor item 0 turtle-data-for-patches + distancexy item 1 turtle-data-for-patches item 2 turtle-data-for-patches
-       set patch-data (list pxcor pycor pcolor)
-       gbcc:set (word "patch-data-" pxcor "-" pycor) patch-data
-       ask turtles [ gbcc:add-to-stream (word id "-patch-data") patch-data ]
-    ]
+;    let patch-data (list xcor ycor color) 
+;    let turtle-data-for-patches (list color xcor ycor)
+;    ask patches in-radius 3 
+;    [
+;       set pcolor item 0 turtle-data-for-patches + distancexy item 1 turtle-data-for-patches item 2 turtle-data-for-patches
+;       set patch-data (list pxcor pycor pcolor)
+;       gbcc:set (word "patch-data-" pxcor "-" pycor) patch-data
+;      ask turtles [ gbcc:add-to-stream (word id "-patch-data") patch-data ]
+;    ]
   ]
 end
+
+to harvest-sugar [ user-id message]
+  ask turtles with [ id = user-id ][
+;    if (message = "harvest")
+;        [
+        set sugar sugar + 1
+        set color color + 10
+        set psugar psugar - 1
+        set pcolor pcolor - 10
+ ;        ]
+ ;   gbcc:set "sugar" sugar
+ ;   gbcc:set "psugar"    
+;    gbcc:set (word "turtle-sugar-" user-id) (sugar)
+    let turtle-sugar (list user-id sugar)
+    ask turtles [ gbcc:add-to-stream (word id "-turtle-sugar") turtle-sugar ]
+    let patch-sugar (list xcor ycor psugar)
+;    set patch-data (list pxcor pycor psugar)
+;    gbcc:set (word "patch-sugar-" pxcor "-" pycor) patch-sugar
+    ask turtles [ gbcc:add-to-stream (word id "-patch-sugar" patch-sugar) ]
+  ]
 
 ;;;; TEACHER ACTIONS ;;;;
 
 to reset-patches
   let patch-data (list)
+  let patch-sugar (list)
   ask patches [
     set pcolor 3
-    gbcc:set (word "patch-data-" pxcor "-" pycor) pcolor
+    set psugar 35
+    gbcc:set (word "patch-data-" pxcor "-" pycor) pcolor ;;;;;;why is this needed?
+    gbcc:set (word "patch-sugar-" pxcor "-" pycor) psugar
     set patch-data (list pxcor pycor pcolor)
+    set patch-sugar (list pxcor pycor psugar)
     ask turtles [ gbcc:add-to-stream (word id "-patch-data") patch-data ]
+    ask turtles [ gbcc:add-to-stream (word id "-patch-sugar") patch-sugar ]
   ]
 end
 
@@ -339,7 +375,7 @@ to setup-turtle [ user-id ]
   create-turtles 1 [
     set id user-id
     set size 1
-    set shape "circle"
+    set shape "defalt"
     hide-turtle
   ]
 end
@@ -350,9 +386,11 @@ to setup-listen-to-teacher [ user-id ]
   ask turtles [
     set coords gbcc:get-from-user user-id (word "turtle-data-" id)
     setxy item 1 coords item 2 coords
+    set sugar gbcc:get-from-user user-id "sugar" ;(word "turtle-sugar" id)  ;;
   ]
   ask patches [
     set pcolor gbcc:get-from-user user-id (word "patch-data-" pxcor "-" pycor)
+    set psugar gbcc:get-from-user user-id (word "patch-sugar-" pxcor "-" pycor)  ;;
   ]
 end
 
@@ -362,12 +400,22 @@ to listen-to-teacher [ user-id ]
      ;; message is of form [ user-id xcor ycor ]
      ask turtles with [ id = item 0 message ] [ setxy item 1 message item 2 message ]
    ]
+
+    let turtle-sugar-messages gbcc:get-stream-from-user user-id (word my-user-id "-sugar-data")
+    foreach turtle-sugar-messages [ message ->
+        ask turltes with [id = item 0 message ][set sugar item 1 message]
+    ]
    let patch-messages gbcc:get-stream-from-user user-id (word my-user-id "-patch-data")
    foreach patch-messages [ message ->
      ;; message is of form [ pxcor pycor pcolor ]
      ask patch item 0 message item 1 message [ set pcolor item 2 message ]
    ]
+    let patch-sugar-message gbcc:get-stream-from-user user-id (word my-user-id "-patch-sugar")
+    foreach pathce-sugar-message [ message ->
+    ask patch item 0 message item 1 message [ set psugar item 2 message]
+    ]
 end
+
 
 ;;;; STUDENT ACTIONS ;;;;
 
@@ -387,6 +435,10 @@ to go-right
   gbcc:add-to-stream "move" "right"
 end
 
+to harvest 
+  gbcc:add-to-stream "harvest" ""
+end
+
 to create-my-turtle [ my-id ] 
   create-turtles 1 [
     set id my-id
@@ -394,7 +446,9 @@ to create-my-turtle [ my-id ]
     set shape "circle"
     set my-turtle-number who
     set color random 14 * 10 + 4
+    set sugar random 5 + 1
     gbcc:set "color" color
+    gbcc:set "sugar" sugar
     setxy random-xcor random-ycor
     gbcc:set (word "turtle-data-" my-id) (list my-id xcor ycor)
   ]
@@ -409,6 +463,7 @@ to share-avatar
 end
 
 @#$#@#$#@
+<!--Element 0-->
 MONITOR
 50
 53
@@ -419,7 +474,7 @@ sugar-total
 0
 1
 11
-
+<!--Element 1-->
 GRAPHICS-WINDOW
 310
 10
@@ -447,7 +502,7 @@ GRAPHICS-WINDOW
 ticks
 30.0
 
-
+<!--Element 2-->
 BUTTON
 33
 80
@@ -464,7 +519,7 @@ NIL
 NIL
 NIL
 1
-
+<!--Element 3-->
 BUTTON
 34
 194
@@ -482,7 +537,7 @@ NIL
 NIL
 1
 
-
+<!--Element 4-->
 TEXTBOX
 23
 298
@@ -494,7 +549,7 @@ TEXTBOX
 1
 
 
-
+<!--Element 5-->
 BUTTON
 51
 97
@@ -511,7 +566,7 @@ NIL
 NIL
 NIL
 1
-
+<!--Element 6-->
 BUTTON
 39
 171
@@ -528,7 +583,7 @@ NIL
 NIL
 NIL
 1
-
+<!--Element 7-->
 BUTTON
 5
 135
@@ -545,7 +600,7 @@ NIL
 NIL
 NIL
 1
-
+<!--Element 8-->
 BUTTON
 103
 134
@@ -562,7 +617,7 @@ NIL
 NIL
 NIL
 1
-
+<!--Element 9-->
 TEXTBOX
 17
 30
@@ -572,7 +627,7 @@ TEXTBOX
 11
 0.0
 1
-
+<!--Element 10-->
 TEXTBOX
 15
 315
@@ -582,7 +637,7 @@ TEXTBOX
 11
 0.0
 1
-
+<!--Element 11-->
 BUTTON
 17
 251
