fixed harvest-sugar with no end

--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@ to harvest-sugar [ user-id message]
 ;    gbcc:set (word "patch-sugar-" pxcor "-" pycor) patch-sugar
     ask turtles [ gbcc:add-to-stream (word id "-patch-sugar" patch-sugar) ]
   ]
+end
 
 ;;;; TEACHER ACTIONS ;;;;
 
